# API.SpeakEasy.tools

./: .gitignore  README.md  package-lock.json  package.json  server.js
etc/: local.env
firebase/: .firebaserc  .gitignore  README.md  package-lock.json  package.json
firebase/functions/: index.js  package-lock.json  package.json
firebase/scripts/: firebase_auth.js  tts_test.js
flask_server/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: config.js  index.js
src/api/: googleRouting.js  readFile.js
src/controllers/text_to_speech/: text_to_speech_controller.js  text_to_speech_router.js
src/models/: Speech.js  Text.js
src/repositories/: text_to_speech_repository.js
src/services/: server.js
